# peekaboo

./: README.md  config.example.yml  meson.build
protocols/: wlr-screencopy-unstable-v1.xml  xdg-output-unstable-v1.xml
src/: config.c  config.h  layout.c  layout.h  log.c  log.h  main.c  peekaboo.h  preview.c  preview.h  shm.c  shm.h  styles.h  surface.c  surface.h  surface_cache.c  surface_cache.h  util.c  util.h  vec.c  vec.h
src/wm_client/: hyprland.c  hyprland.h  wm_client.c  wm_client.h
